<resources>
    <string name="app_name">Google Books</string>
    <string name="parameters_for_searching_books">Уточните параметры, по которым искать книги</string>
    <string name="search_parameters">Параметры поиска</string>
    <string name="search_all_books">Поиск по всему</string>
    <string name="search_by_author">По автору</string>
    <string name="search_by_title">По названиюу</string>
    <string name="search_by_genre">По жанру</string>
    <string name="search_by_publisher">По издателю</string>
    <string name="search">Поиск</string>
    <string name="Right_book_always_will_be_find">Нужная книга всегда найдется</string>
</resources>