<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:elevation="4dp"
        android:paddingTop="36dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_settings_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:text="@string/search_parameters"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/parameters_for_searching_books"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings" />

    <ScrollView
        android:id="@+id/nsv_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/tv_search_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/tv_settings_shape"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="8dp"
                android:text="@string/search_all_books"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_settings" />

            <TextView
                android:id="@+id/tv_search_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tv_settings_shape"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="8dp"
                android:text="@string/search_by_author"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_search_all" />

            <TextView
                android:id="@+id/tv_search_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tv_settings_shape"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="8dp"
                android:text="@string/search_by_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_search_author" />

            <TextView
                android:id="@+id/tv_search_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tv_settings_shape"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="8dp"
                android:text="@string/search_by_genre"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_search_title" />

            <TextView
                android:id="@+id/tv_search_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tv_settings_shape"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="8dp"
                android:text="@string/search_by_publisher"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_search_genre" />

            <RadioGroup
                android:id="@+id/rg_settings_check"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_width"
                android:layout_marginEnd="@dimen/margin_size_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/tv_search_publisher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_search_all">

                <RadioButton
                    android:id="@+id/rb_search_all"
                    android:layout_width="@dimen/width_24"
                    android:layout_height="@dimen/height_24"
                    android:layout_marginTop="@dimen/margin_size_8"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/rb_search_author"
                    android:layout_width="@dimen/width_24"
                    android:layout_height="@dimen/height_24"
                    android:layout_marginTop="@dimen/margin_size_16"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="false"
                    tools:checked="true" />

                <RadioButton
                    android:id="@+id/rb_search_title"
                    android:layout_width="@dimen/width_24"
                    android:layout_height="@dimen/height_24"
                    android:layout_marginTop="@dimen/margin_size_16"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/rb_search_genre"
                    android:layout_width="@dimen/width_24"
                    android:layout_height="@dimen/height_24"
                    android:layout_marginTop="@dimen/margin_size_16"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/rb_search_publisher"
                    android:layout_width="@dimen/width_24"
                    android:layout_height="@dimen/height_24"
                    android:layout_marginTop="@dimen/margin_size_16"
                    android:background="@drawable/selector_radio_button"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="false" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>